feat: support multi-owner workflows by enriching component and team fields to lists
